Исправлены ошибки, index сделан резиновым

--- a/index.html
+++ b/index.html
@@ -38,72 +38,76 @@
       <article class="reason">
         <div class="reason__about">
           <h3 class="reason__title">Настоящий городок</h3>
-          <p class="reason__text">- &#8470; 1 -</p>
+          <p class="reason__number">- &#8470; 1 -</p>
           <p class="reason__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
         </div>
         <div class="reason__picture">
           <picture>
             <source media="(min-width: 1200px)"
-                    srcset="img/photo-city@2x.jpg 2x,
-                    img/photo-city@1x.jpg 1x">
+                    srcset="img/photo-city@1x.jpg 1x,
+                    img/photo-city@2x.jpg 2x">
             <source media="(min-width: 768px)"
-                    srcset="img/photo-city-tablet@2x.jpg 2x,
-                    img/photo-city-tablet@1x.jpg 1x">
-            <img srcset="img/photo-city-mobile@2x.jpg 2x, img/photo-city-mobile@1x.jpg  1x" alt="Sedona">
+                    srcset="img/photo-city-tablet@1x.jpg 1x,
+                    img/photo-city-tablet@2x.jpg 2x">
+            <img srcset="img/photo-city-mobile@1x.jpg 1x, img/photo-city-mobile@2x.jpg 2x" alt="Sedona" width="100%">
           </picture>
         </div>
       </article>
       <section class="offers">
-        <article class="offer">
-          <svg class="offer__icon  offer__icon--house"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-house"></use></svg>
+        <section class="offer">
+          <svg class="offer__icon  offer__icon--house">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-house"></use>
+          </svg>
           <h3 class="offer__title">Жилье</h3>
           <p class="offer__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-        </article>
-        <article class="offer">
+        </section>
+        <section class="offer">
           <svg class="offer__icon  offer__icon--gift"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-gift"></use></svg>
           <h3 class="offer__title">Сувениры</h3>
           <p class="offer__text">Не только китайского, но и местного производства!</p>
-        </article>
-        <article class="offer">
-          <svg class="offer__icon  offer__icon--burger"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-burger"></use></svg>
+        </section>
+        <section class="offer">
+          <svg class="offer__icon  offer__icon--burger">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-burger"></use>
+          </svg>
           <h3 class="offer__title">Еда</h3>
           <p class="offer__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-        </article>
+        </section>
       </section>
-      <article class="reason">
+      <section class="reason">
         <div class="reason__picture">
           <picture>
             <source media="(min-width: 1200px)"
-                    srcset="img/photo-bridge@2x.jpg 2x,
-                    img/photo-bridge@1x.jpg 1x">
+                    srcset="img/photo-bridge@1x.jpg 1x,
+                    img/photo-bridge@2x.jpg 2x">
             <source media="(min-width: 768px)"
-                    srcset="img/photo-bridge-tablet@2x.jpg 2x,
-                    img/photo-bridge-tablet@1x.jpg 1x">
-            <img srcset="img/photo-bridge-mobile@2x.jpg 2x, img/photo-bridge-mobile@1x.jpg  1x" alt="Sedona">
+                    srcset="img/photo-bridge-tablet@1x.jpg 1x,
+                    img/photo-bridge-tablet@2x.jpg 2x">
+            <img srcset="img/photo-bridge-mobile@1x.jpg 1x, img/photo-bridge-mobile@2x.jpg 2x" alt="Sedona" width="100%">
           </picture>
         </div>
         <div class="reason__about">
           <h3 class="reason__title">Там есть мост дьявола</h3>
-          <p class="reason__text">- &#8470; 2 -</p>
+          <p class="reason__number">- &#8470; 2 -</p>
           <p class="reason__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         </div>
-      </article>
+      </section>
       <section class="reason  reason--secondary">
-        <article class="reason__about">
+        <section class="reason__about">
           <h3 class="reason__title">Небольшая площадь</h3>
-          <p class="reason__text">- &#8470; 3 -</p>
+          <p class="reason__number">- &#8470; 3 -</p>
           <p class="reason__text">Все достопримеча&shy;тельности находятся очень близко</p>
-        </article>
-        <article class="reason__about">
+        </section>
+        <section class="reason__about">
           <h3 class="reason__title">Красивая дорога</h3>
-          <p class="reason__text">- &#8470; 4 -</p>
+          <p class="reason__number">- &#8470; 4 -</p>
           <p class="reason__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </article>
-        <article class="reason__about">
+        </section>
+        <section class="reason__about">
           <h3 class="reason__title">Мало туристов</h3>
-          <p class="reason__text">- &#8470; 5 -</p>
+          <p class="reason__number">- &#8470; 5 -</p>
           <p class="reason__text">Большинство едет в Гранд каньон и толпится там</p>
-        </article>
+        </section>
       </section>
       <div class="search">
         <h2 class="search__title">Заинтересовались?</h2>
@@ -116,7 +120,7 @@
                   srcset="img/bg-map-desktop@1x.jpg">
           <source media="(min-width: 768px)"
                   srcset="img/bg-map-tablet@1x.jpg">
-          <img src="img/bg-map-mobile@1x.jpg" alt="Sedona">
+          <img src="img/bg-map-mobile@1x.jpg" alt="Sedona" width="auto">
         </picture>
       </div>
     </main>
@@ -127,18 +131,34 @@
       <div class="page-footer__menu">
         <div class="social">
           <div class="social__item">
-            <a class="social__link  social__link--twitter" href="#"></a>
+            <a class="social__link" href="#">twitter
+              <svg class="social__icon">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use>
+              </svg>
+            </a>
           </div>
           <div class="social__item">
-            <a class="social__link  social__link--facebook" href="#"></a>
+            <a class="social__link" href="#">facebook
+              <svg class="social__icon">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use>
+              </svg>
+            </a>
           </div>
           <div class="social__item">
-            <a class="social__link  social__link--youtube" href="#"></a>
+            <a class="social__link" href="#">youtube
+              <svg class="social__icon">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-youtube"></use>
+              </svg>
+            </a>
           </div>
         </div>
       </div>
       <div class="copyright">
-        <a class="copyright__link" href="#">Разработано<svg class="copyright__icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#htmlacademy"></use></svg></a>
+        <a class="copyright__link" href="#">Разработано
+          <svg class="copyright__icon">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#htmlacademy"></use>
+          </svg>
+        </a>
       </div>
     </footer>
     <script src="js/toggle.js"></script>
