--- a/photo.html
+++ b/photo.html
@@ -40,12 +40,12 @@
           <div class="photos__picture">
             <picture>
               <source media="(min-width: 1200px)"
-                      srcset="img/photo-1-desktop@2x.jpg 2x,
-                      img/photo-1-desktop@1x.jpg 1x">
+                      srcset="img/photo-1-desktop@1x.jpg 1x,
+                      img/photo-1-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)"
-                      srcset="img/photo-1-tablet@2x.jpg 2x,
-                      img/photo-1-tablet@1x.jpg 1x">
-              <img srcset="img/photo-1-mobile@2x.jpg 2x, img/photo-1-mobile@1x.jpg  1x" alt="Sedona">
+                      srcset="img/photo-1-tablet@1x.jpg 1x,
+                      img/photo-1-tablet@2x.jpg 2x">
+              <img srcset="img/photo-1-mobile@1x.jpg 1x, img/photo-1-mobile@2x.jpg 2x" alt="Sedona">
             </picture>
           </div>
           <div class="photos__description">
@@ -60,12 +60,12 @@
           <div class="photos__picture">
             <picture>
               <source media="(min-width: 1200px)"
-                      srcset="img/photo-2-desktop@2x.jpg 2x,
-                      img/photo-2-desktop@1x.jpg 1x">
+                      srcset="img/photo-2-desktop@1x.jpg 1x,
+                      img/photo-2-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)"
-                      srcset="img/photo-2-tablet@2x.jpg 2x,
-                      img/photo-2-tablet@1x.jpg 1x">
-              <img srcset="img/photo-2-mobile@2x.jpg 2x, img/photo-2-mobile@1x.jpg  1x" alt="Sedona">
+                      srcset="img/photo-2-tablet@1x.jpg 1x,
+                      img/photo-2-tablet@2x.jpg 2x">
+              <img srcset="img/photo-2-mobile@1x.jpg 1x, img/photo-2-mobile@2x.jpg 2x" alt="Sedona">
             </picture>
           </div>
           <div class="photos__description">
@@ -80,12 +80,12 @@
           <div class="photos__picture">
             <picture>
               <source media="(min-width: 1200px)"
-                      srcset="img/photo-3-desktop@2x.jpg 2x,
-                      img/photo-3-desktop@1x.jpg 1x">
+                      srcset="img/photo-3-desktop@1x.jpg 1x,
+                      img/photo-3-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)"
-                      srcset="img/photo-3-tablet@2x.jpg 2x,
-                      img/photo-3-tablet@1x.jpg 1x">
-              <img srcset="img/photo-3-mobile@2x.jpg 2x, img/photo-3-mobile@1x.jpg  1x" alt="Sedona">
+                      srcset="img/photo-3-tablet@1x.jpg 1x,
+                      img/photo-3-tablet@2x.jpg 2x">
+              <img srcset="img/photo-3-mobile@1x.jpg 1x, img/photo-3-mobile@2x.jpg 2x" alt="Sedona">
             </picture>
           </div>
           <div class="photos__description">
@@ -100,12 +100,12 @@
           <div class="photos__picture">
             <picture>
               <source media="(min-width: 1200px)"
-                      srcset="img/photo-4-desktop@2x.jpg 2x,
-                      img/photo-4-desktop@1x.jpg 1x">
+                      srcset="img/photo-4-desktop@1x.jpg 1x,
+                      img/photo-4-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)"
-                      srcset="img/photo-4-tablet@2x.jpg 2x,
-                      img/photo-4-tablet@1x.jpg 1x">
-              <img srcset="img/photo-4-mobile@2x.jpg 2x, img/photo-4-mobile@1x.jpg  1x" alt="Sedona">
+                      srcset="img/photo-4-tablet@1x.jpg 1x,
+                      img/photo-4-tablet@2x.jpg 2x">
+              <img srcset="img/photo-4-mobile@1x.jpg 1x, img/photo-4-mobile@2x.jpg 2x" alt="Sedona">
             </picture>
           </div>
           <div class="photos__description">
@@ -125,19 +125,25 @@
         <article class="video__item">
           <picture>
             <source media="(min-width: 1200px)"
-                    srcset="img/video-desktop@2x.jpg 2x,
-                    img/video-desktop@1x.jpg 1x">
+                    srcset="img/video-desktop@1x.jpg 1x,
+                    img/video-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)"
-                    srcset="img/video-tablet@2x.jpg 2x,
-                    img/video-tablet@1x.jpg 1x">
-            <img srcset="img/video-mobile@2x.jpg 2x, img/video-mobile@1x.jpg  1x" alt="Sedona">
+                    srcset="img/video-tablet@1x.jpg 1x,
+                    img/video-tablet@2x.jpg 2x">
+            <img srcset="img/video-mobile@1x.jpg 1x, img/video-mobile@2x.jpg 2x" alt="Sedona">
           </picture>
           <div class="player">
             <div class="player__toggle"></div>
             <div class="player__items">
-              <svg class="player__item  player__item--replay"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video-replay"></use></svg>
-              <svg class="player__item  player__item--subtitles"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video-subtitles"></use></svg>
-              <svg class="player__item  player__item--fullscreen"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video-fullscreen"></use></svg>
+              <svg class="player__item  player__item--replay">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video-replay"></use>
+              </svg>
+              <svg class="player__item  player__item--subtitles">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video-subtitles"></use>
+              </svg>
+              <svg class="player__item  player__item--fullscreen">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-video-fullscreen"></use>
+              </svg>
             </div>
           </div>
         </article>
@@ -150,18 +156,34 @@
       <div class="page-footer__menu">
         <div class="social">
           <div class="social__item">
-            <a class="social__link  social__link--twitter" href="#"></a>
+            <a class="social__link" href="#">twitter
+              <svg class="social__icon">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use>
+              </svg>
+            </a>
           </div>
           <div class="social__item">
-            <a class="social__link  social__link--facebook" href="#"></a>
+            <a class="social__link" href="#">facebook
+              <svg class="social__icon">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use>
+              </svg>
+            </a>
           </div>
           <div class="social__item">
-            <a class="social__link  social__link--youtube" href="#"></a>
+            <a class="social__link" href="#">youtube
+              <svg class="social__icon">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-youtube"></use>
+              </svg>
+            </a>
           </div>
         </div>
       </div>
       <div class="copyright">
-        <a class="copyright__link" href="#">Разработано<svg class="copyright__icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#htmlacademy"></use></svg></a>
+        <a class="copyright__link" href="#">Разработано
+          <svg class="copyright__icon">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#htmlacademy"></use>
+          </svg>
+        </a>
       </div>
     </footer>
     <script src="js/toggle.js"></script>
