--- a/form.html
+++ b/form.html
@@ -38,18 +38,18 @@
       <form class="form" action="index.html" method="post">
         <div class="field-text  field-group">
           <h3 class="field-text__title">Представьтесь:</h3>
-          <div class="field-text__wrapper">
-            <label class="field-text__label">Имя*:</label>
+          <label class="field-text__item">
+            <span class="field-text__text">Имя*:</span>
             <input class="field-text__input" name="yourname" type="text" placeholder="Петр" required>
-          </div>
-          <div class="field-text__wrapper">
-            <label class="field-text__label">Фамилия*:</label>
+          </label>
+          <label class="field-text__item">
+            <span class="field-text__text">Фамилия*:</span>
             <input class="field-text__input" name="yoursername" type="text" placeholder="Иванов" required>
-          </div>
-          <div class="field-text__wrapper">
-            <label class="field-text__label">Отчество*:</label>
+          </label>
+          <label class="field-text__item">
+            <span class="field-text__text">Отчество*:</span>
             <input class="field-text__input" name="yourpatronymic" type="text" placeholder="Александрович" required>
-          </div>
+          </label>
         </div>
         <div class="field-text  field-group">
           <h3 class="field-text__title">Контактная информация:</h3>
@@ -83,27 +83,27 @@
           <h3 class="field-checkbox__title">Посещенные достопримечательности:</h3>
           <div class="field-checkbox__wrapper">
             <label class="field-checkbox__item">
-              <input class="field-checkbox__input" type="checkbox" checked>
+              <input class="field-checkbox__input" type="checkbox" name="checkbox" checked>
               <span class="field-checkbox__text">Мост дьявола</span>
             </label>
             <label class="field-checkbox__item">
-              <input class="field-checkbox__input" type="checkbox" checked>
+              <input class="field-checkbox__input" type="checkbox" name="checkbox" checked>
               <span class="field-checkbox__text">Слайд-парк</span>
             </label>
             <label class="field-checkbox__item">
-              <input class="field-checkbox__input" type="checkbox" checked>
+              <input class="field-checkbox__input" type="checkbox" name="checkbox" checked>
               <span class="field-checkbox__text">Гора-колокол</span>
             </label>
             <label class="field-checkbox__item">
-              <input class="field-checkbox__input" type="checkbox">
+              <input class="field-checkbox__input" type="checkbox" name="checkbox">
               <span class="field-checkbox__text">Красные скалы</span>
             </label>
           </div>
         </div>
         <div class="field-text  field-group">
-          <h3 class="field-text__title">Опишите свои эмоции:</h3>
+          <label class="field-text__title" for="textarea">Опишите свои эмоции:</label>
           <div class="field-text__wrapper">
-            <textarea class="field-text__input" type="text" rows="6" placeholder="Опишите подробно все свои восторги"></textarea>
+            <textarea class="field-text__input" id="textarea" type="text" rows="6" placeholder="Опишите подробно все свои восторги"></textarea>
           </div>
         </div>
         <div class="field-action">
@@ -118,18 +118,34 @@
       <div class="page-footer__menu">
         <div class="social">
           <div class="social__item">
-            <a class="social__link  social__link--twitter" href="#"></a>
+            <a class="social__link" href="#">twitter
+              <svg class="social__icon">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use>
+              </svg>
+            </a>
           </div>
           <div class="social__item">
-            <a class="social__link  social__link--facebook" href="#"></a>
+            <a class="social__link" href="#">facebook
+              <svg class="social__icon">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use>
+              </svg>
+            </a>
           </div>
           <div class="social__item">
-            <a class="social__link  social__link--youtube" href="#"></a>
+            <a class="social__link" href="#">youtube
+              <svg class="social__icon">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-youtube"></use>
+              </svg>
+            </a>
           </div>
         </div>
       </div>
       <div class="copyright">
-        <a class="copyright__link" href="#">Разработано<svg class="copyright__icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#htmlacademy"></use></svg></a>
+        <a class="copyright__link" href="#">Разработано
+          <svg class="copyright__icon">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#htmlacademy"></use>
+          </svg>
+        </a>
       </div>
     </footer>
     <script src="js/toggle.js"></script>
