Стилизована страница Photo

--- a/photo.html
+++ b/photo.html
@@ -30,7 +30,7 @@
         <img class="intro__img" src="img/text-sedona.svg" alt="Sedona">
       </div>
     </header>
-    <section class="page-heading">
+    <section class="page-heading--photo">
       <h2 class="page-heading__title">Фото и видео</h2>
       <p class="page-heading__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
     </section>
