--- a/index.html
+++ b/index.html
@@ -115,13 +115,14 @@
         <button class="button" type="button" name="button">Найти гостиницу</button>
       </div>
       <div class="map">
-        <picture>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d841692.6368976982!2d-112.1646251997574!3d34.50638615114123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1498673377299" width="1200" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <!-- <picture>
           <source media="(min-width: 1200px)"
                   srcset="img/bg-map-desktop@1x.jpg">
           <source media="(min-width: 768px)"
                   srcset="img/bg-map-tablet@1x.jpg">
           <img src="img/bg-map-mobile@1x.jpg" alt="Sedona" width="auto">
-        </picture>
+        </picture> -->
       </div>
     </main>
     <footer class="page-footer">
